# unicorn

./: .clang-format  .gitmodules  CMakeLists.txt  readme.md  setup.py
c/: CMakeLists.txt
c/unicorn/: idl.c  idl.h
py/unicorn/: __init__.py  autocomplete.py  idl-schema.json  idl.py  shell.py
